--- a/TwoViewApp/Base.lproj/Main.storyboard
+++ b/TwoViewApp/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,37 +12,37 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TwoViewApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TiW-JH-bUV">
+                                <rect key="frame" x="10" y="10" width="355" height="318.5"/>
+                                <color key="backgroundColor" red="0.24106804228252479" green="0.37683629507970329" blue="0.22109769467312687" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ao-lr-1Ob" colorLabel="IBBuiltInLabel-Yellow">
-                                <rect key="frame" x="0.0" y="440" width="414" height="422"/>
+                                <rect key="frame" x="10" y="338.5" width="355" height="318.5"/>
                                 <color key="backgroundColor" red="0.61684117172703601" green="0.083924625191810334" blue="0.051183900368544921" alpha="0.77169365282879765" colorSpace="custom" customColorSpace="displayP3"/>
                                 <color key="tintColor" red="0.33386376891473324" green="0.12776812930246376" blue="0.13946090544535025" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TiW-JH-bUV">
-                                <rect key="frame" x="0.0" y="44" width="414" height="395"/>
-                                <color key="backgroundColor" red="0.24106804228252479" green="0.37683629507970329" blue="0.22109769467312687" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.61568627450980395" green="0.52156862745098043" blue="0.51764705882352935" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="TiW-JH-bUV" firstAttribute="height" secondItem="3ao-lr-1Ob" secondAttribute="height" multiplier="0.93662" id="Ixh-gT-Jzc"/>
-                            <constraint firstItem="3ao-lr-1Ob" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="L9B-Tl-iHH"/>
-                            <constraint firstItem="TiW-JH-bUV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="RB9-Qg-txb"/>
-                            <constraint firstItem="3ao-lr-1Ob" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="WUI-ug-lBU"/>
-                            <constraint firstItem="TiW-JH-bUV" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="cPM-5E-YSu"/>
-                            <constraint firstItem="TiW-JH-bUV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cWH-Gz-eti"/>
-                            <constraint firstItem="3ao-lr-1Ob" firstAttribute="top" secondItem="TiW-JH-bUV" secondAttribute="bottom" constant="1" id="htf-Ne-ndN"/>
-                            <constraint firstItem="3ao-lr-1Ob" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qr0-F0-kDZ"/>
-                            <constraint firstItem="TiW-JH-bUV" firstAttribute="width" secondItem="3ao-lr-1Ob" secondAttribute="width" id="viL-GF-CIu"/>
+                            <constraint firstItem="TiW-JH-bUV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="8fT-vC-49I"/>
+                            <constraint firstItem="3ao-lr-1Ob" firstAttribute="top" secondItem="TiW-JH-bUV" secondAttribute="bottom" constant="10" id="GQP-Jz-NnA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="3ao-lr-1Ob" secondAttribute="bottom" constant="10" id="Ibt-KJ-eZQ"/>
+                            <constraint firstItem="3ao-lr-1Ob" firstAttribute="top" secondItem="TiW-JH-bUV" secondAttribute="bottom" constant="10" id="Jcj-jX-Wpl"/>
+                            <constraint firstItem="TiW-JH-bUV" firstAttribute="height" secondItem="3ao-lr-1Ob" secondAttribute="height" id="KKE-Gx-B9v"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TiW-JH-bUV" secondAttribute="trailing" constant="10" id="Vw5-Sv-Zxi"/>
+                            <constraint firstItem="TiW-JH-bUV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="cEF-Tf-c7j"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3ao-lr-1Ob" secondAttribute="trailing" constant="10" id="fL5-wE-MCU"/>
+                            <constraint firstItem="3ao-lr-1Ob" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="vHu-ES-sxn"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="18.75" y="67.605633802816897"/>
+            <point key="canvasLocation" x="18.399999999999999" y="67.016491754122939"/>
         </scene>
     </scenes>
 </document>
